# thinger-http

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  run_coverage.sh
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  coverage.yml  examples.yml  fuzzing.yml  sanitizers.yml
benchmark/: .gitignore  README.md  run_benchmarks.sh
benchmark/cpp-httplib/: main.cpp
benchmark/crow/: main.cpp
benchmark/thinger-http/: main.cpp
cmake/: ThingerHttpConfig.cmake.in
examples/: CMakeLists.txt  README.md  logging_example.cpp
examples/http_async_client/: CMakeLists.txt  concurrent_requests.cpp  simple_async_client.cpp  simple_async_client_coro.cpp  streaming_download_example.cpp  streaming_download_example_coro.cpp  timeout_example.cpp  websocket_client_example.cpp
examples/http_client/: CMakeLists.txt  README.md  multiple_requests.cpp  simple_http_client.cpp  streaming_download_example.cpp  timeout_example.cpp  websocket_client_example.cpp
examples/http_server/: CMakeLists.txt  README.md  advanced_http_server.cpp  routing_example.cpp  server_auth_example.cpp  server_cors_example.cpp  server_example.cpp  server_schema_example.cpp  server_shutdown_example.cpp  server_sse_example.cpp  server_streaming_upload_example.cpp  server_upload_example.cpp  server_websocket_example.cpp  simple_http_server.cpp  simple_https_server.cpp
tests/: CMakeLists.txt  TEST_PLAN.md  test_main.cpp
tests/fixtures/: ssl_test_server_fixture.hpp  test_server_fixture.hpp
tests/fuzz/: CMakeLists.txt  fuzz_http_request_parser.cpp  fuzz_url_decode.cpp  fuzz_utf8_validate.cpp
tests/fuzz/corpus/http_request_parser/: get_with_headers.txt  post_with_body.txt
tests/fuzz/corpus/url_decode/: encoded_special.txt  key_value_pairs.txt
tests/integration/: async_client_thread_affinity_test.cpp  async_client_wait_test.cpp  client_async_test.cpp  client_redirect_test.cpp  client_sync_test.cpp  client_timeout_test.cpp  client_wait_test.cpp  compression_test.cpp  connection_pool_test.cpp  http_server_base_test.cpp  request_builder_test.cpp  routing_test.cpp  schema_validation_test.cpp  server_basic_test.cpp  server_request_response_test.cpp  socket_io_test.cpp  socket_pipe_test.cpp  sse_test.cpp  ssl_client_test.cpp  unix_socket_server_test.cpp  websocket_client_test.cpp
tests/unit/asio/: certificate_manager_test.cpp  workers_test.cpp
tests/unit/asio/sockets/: ssl_socket_test.cpp  tcp_socket_test.cpp
tests/unit/http/client/: client_test.cpp  connection_pool_thread_safety_test.cpp  cookie_test.cpp  form_test.cpp  request_builder_test.cpp
tests/unit/http/common/: headers_test.cpp  http_data_test.cpp  http_request_test.cpp  http_response_test.cpp
tests/unit/http/server/: request_factory_test.cpp  route_test.cpp  server_test.cpp
tests/unit/http/util/: url_test.cpp
thinger/: http.hpp  http_client.hpp  http_server.hpp
thinger/asio/: io_worker.cpp  socket_pipe.cpp  socket_pipe.hpp  socket_server.cpp  socket_server.hpp  socket_server_base.cpp  socket_server_base.hpp  tcp_socket_server.cpp  tcp_socket_server.hpp  unix_socket_server.cpp  unix_socket_server.hpp  worker_client.cpp  worker_client.hpp  worker_thread.cpp  workers.cpp  workers.hpp
thinger/asio/sockets/: socket.cpp  socket.hpp  ssl_socket.cpp  ssl_socket.hpp  tcp_socket.cpp  tcp_socket.hpp  unix_socket.cpp  unix_socket.hpp  websocket.cpp  websocket.hpp
thinger/asio/ssl/: certificate_manager.cpp  certificate_manager.hpp
thinger/http/client/: async_client.cpp  async_client.hpp  client.cpp  client.hpp  client_connection.cpp  client_connection.hpp  client_response.hpp  connection_pool.cpp  connection_pool.hpp  cookie.cpp  cookie.hpp  cookie_store.cpp  cookie_store.hpp  form.cpp  form.hpp  http_client_base.cpp  http_client_base.hpp  request_builder.hpp  response_factory.cpp  response_factory.hpp  stream_types.hpp  websocket_client.cpp  websocket_client.hpp  websocket_util.cpp  websocket_util.hpp
thinger/http/common/: headers.cpp  headers.hpp  http_data.hpp  http_frame.cpp  http_frame.hpp  http_request.cpp  http_request.hpp  http_response.cpp  http_response.hpp
thinger/http/data/: out_array.hpp  out_buffer.hpp  out_chunk.hpp  out_data.hpp  out_sendfile.hpp  out_string.hpp
thinger/http/server/: chunked_pipe.hpp  http_server_base.cpp  http_server_base.hpp  http_stream.cpp  http_stream.hpp  mime_types.cpp  mime_types.hpp  pool_server.cpp  pool_server.hpp  request.cpp  request.hpp  request_factory.cpp  request_factory.hpp  request_handler.hpp  response.cpp  response.hpp  server_connection.cpp  server_connection.hpp  server_standalone.cpp  server_standalone.hpp  sse_connection.cpp  sse_connection.hpp  websocket_connection.cpp  websocket_connection.hpp  websocket_pipe.hpp
thinger/http/server/file_server/: file_server_handler.cpp  file_server_handler.hpp  mmap_file_handler.hpp  sendfile_file_handler.hpp  simple_file_handler.hpp
thinger/http/server/routing/: route.cpp  route.hpp  route_builder.hpp  route_handler.cpp  route_handler.hpp
thinger/http/util/: data_buffer.hpp  url.cpp  url.hpp  utf8.hpp
thinger/util/: base64.hpp  compression.hpp  gzip.hpp  hex.hpp  logger.hpp  sha1.hpp  shared_keeper.hpp  types.hpp
